--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@nestjs/mongoose": "^11.0.2",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.0.12",
+    "@nestjs/swagger": "^11.0.7",
     "@nestjs/websockets": "^11.0.12",
-    "mongoose": "^8.12.2",
+    "mongoose": "^8.13.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
