--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "argon2": "^0.41.1",
     "mongoose": "^8.13.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
