--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/platform-socket.io": "^11.0.12",
     "@nestjs/swagger": "^11.0.7",
     "@nestjs/websockets": "^11.0.12",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "mongoose": "^8.13.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
