--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@nestjs/platform-socket.io": "^11.0.12",
     "@nestjs/swagger": "^11.0.7",
     "@nestjs/websockets": "^11.0.12",
+    "@types/mime-types": "^2.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "mime-types": "^3.0.1",
     "mongoose": "^8.13.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
